// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`author 1`] = `
"/**
 * @license
 *
 * main:
 *   version: 0.0.0
 *   license: MIT
 *   author: a
 *
 */
"
`;

exports[`author 2`] = `
"/**
 * @license
 *
 * main:
 *   version: 0.0.0
 *   license: MIT
 *   author: a
 *
 */
"
`;

exports[`author 3`] = `
"/**
 * @license
 *
 * main:
 *   version: 0.0.0
 *   license: MIT
 *   author: a <a@example.com>
 *
 */
"
`;

exports[`contributors 1`] = `
"/**
 * @license
 *
 * main:
 *   version: 0.0.0
 *   license: MIT
 *   contributors: c1 <c1@example.com>
 *
 */
"
`;

exports[`contributors 2`] = `
"/**
 * @license
 *
 * main:
 *   version: 0.0.0
 *   license: MIT
 *   contributors: c1, c2 <c2@example.com>
 *
 */
"
`;

exports[`deps only 1`] = `
"/**
 * @license
 *
 * a:
 *   version: 0.0.0
 *   license: MIT
 *
 * b:
 *   version: 0.0.0
 *   license: MIT
 *
 */
"
`;

exports[`deps package sort by name 1`] = `
"/**
 * @license
 *
 * main:
 *   version: 0.0.0
 *   license: MIT
 *
 * a:
 *   version: 0.0.0
 *   license: MIT
 *
 * b:
 *   version: 0.0.0
 *   license: MIT
 *
 * c:
 *   version: 0.0.0
 *   license: MIT
 *
 */
"
`;

exports[`homepage 1`] = `
"/**
 * @license
 *
 * main:
 *   version: 0.0.0
 *   license: MIT
 *   homepage: http://example.com/
 *
 */
"
`;

exports[`main package only 1`] = `
"/**
 * @license
 *
 * main:
 *   version: 0.0.0
 *   license: MIT
 *
 */
"
`;

exports[`maintainers 1`] = `
"/**
 * @license
 *
 * main:
 *   version: 0.0.0
 *   license: MIT
 *   maintainers: m1 <m1>
 *
 */
"
`;

exports[`maintainers 2`] = `
"/**
 * @license
 *
 * main:
 *   version: 0.0.0
 *   license: MIT
 *   maintainers: m1, m2 <m2@example.com>
 *
 */
"
`;

exports[`multi versions: different license 1`] = `
"/**
 * @license
 *
 * c:
 *   version: 1.0.0
 *   license: MIT
 *
 *   version: 2.0.0
 *   license: ISC
 *
 *   version: 3.0.0
 *   license: MIT OR ISC
 *
 */
"
`;

exports[`multi versions: same info 1`] = `
"/**
 * @license
 *
 * c:
 *   version: 1.0.0, 2.0.0, 3.0.0
 *   license: MIT
 *
 */
"
`;

exports[`multi versions: semver sort 1`] = `
"/**
 * @license
 *
 * a:
 *   version: 1.0.0, v2.0.0, 3.0.0-alpha.1, 4.0.0-rc.1
 *   license: MIT
 *
 */
"
`;

exports[`multi versions: some same info 1`] = `
"/**
 * @license
 *
 * c:
 *   version: 1.0.0
 *   license: MIT OR ISC
 *
 *   version: 2.0.0, 4.0.0
 *   license: MIT
 *
 *   version: 3.0.0
 *   license: ISC
 *
 */
"
`;

exports[`no package 1`] = `""`;

exports[`pkg is extracted 1`] = `
"/**
 * @license
 *
 * main:
 *   version: 0.0.0
 *   license: MIT
 *
 * a:
 *   version: 0.0.0
 *   license: MIT
 *
 * b:
 *   version: 0.0.0
 *   license: MIT
 *
 * c:
 *   version: 0.0.0
 *   license: MIT
 *
 */
"
`;

exports[`private package 1`] = `""`;

exports[`private package 2`] = `
"/**
 * @license
 *
 * b:
 *   version: 0.0.0
 *   license: MIT
 *
 */
"
`;
